# pindraw

backend/: README.md  pyproject.toml  test.py
backend/apps/api/: pyproject.toml
backend/apps/api/src/api/: main.py
backend/apps/ws/: pyproject.toml
backend/apps/ws/src/ws/: main.py
frontend/: next.config.ts  package.json
frontend/app/(pages)/: layout.tsx
frontend/app/(pages)/(home)/: page.tsx
frontend/app/(pages)/resume/: page.tsx
frontend/app/(pages)/room/[id]/: page.tsx
frontend/app/whiteboard/: canvas.ts  types.ts
frontend/components/: resume-tips.tsx
frontend/whiteboard/: atoms.ts  canvas.ts  pindraw.tsx  tools.tsx  types.ts
