[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "itsmanojthapa", email = "itsmanojthapa@gmail.com" }
]
requires-python = ">=3.11"
dependencies = ["db", "common", "pydantic-models"]


[project.scripts]
api = "api.main:start" # uv run --package api api

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
